# top-down-game-engine-ai

./: .gitignore  CMakeLists.txt  ClaudeChat.md  InitialPrompt.md  PROGRESS.md  README.md  build_err.txt  build_err2.txt  build_err3.txt  build_error.txt  build_out.txt  generate_attack_sprites.py  generate_simple_tilesets.py  generate_tileset.py  generate_tilesets.py  process_brute.py  process_items.py  process_sprites.py  simple_process_brute.py
.claude/: settings.local.json
engine/: CMakeLists.txt
engine/include/engine/: Engine.hpp
engine/include/engine/Audio/: AudioManager.hpp
engine/include/engine/Camera/: Camera.hpp
engine/include/engine/Collision/: CollisionSystem.hpp
engine/include/engine/Components/: AIComponent.hpp  AnimationComponent.hpp  ColliderComponent.hpp  HealthComponent.hpp  SpriteComponent.hpp  TransformComponent.hpp  VelocityComponent.hpp
engine/include/engine/Core/: GameEngine.hpp  Types.hpp
engine/include/engine/Entity/: Component.hpp  Entity.hpp
engine/include/engine/Input/: InputManager.hpp
engine/include/engine/Renderer/: Renderer.hpp
engine/include/engine/Resources/: ResourceManager.hpp
engine/include/engine/Scene/: IScene.hpp  SceneManager.hpp
engine/include/engine/Tilemap/: FogOfWar.hpp  Tilemap.hpp
engine/include/engine/UI/: HealthBar.hpp  Label.hpp
engine/include/engine/Window/: Window.hpp
engine/src/Audio/: AudioManager.cpp
engine/src/Camera/: Camera.cpp
engine/src/Collision/: CollisionSystem.cpp
engine/src/Components/: AIComponent.cpp  AnimationComponent.cpp  ColliderComponent.cpp  HealthComponent.cpp  SpriteComponent.cpp
engine/src/Core/: GameEngine.cpp
engine/src/Entity/: Entity.cpp
engine/src/Input/: InputManager.cpp
engine/src/Renderer/: Renderer.cpp
engine/src/Resources/: ResourceManager.cpp
engine/src/Scene/: SceneManager.cpp
engine/src/Tilemap/: FogOfWar.cpp  Tilemap.cpp
engine/src/UI/: HealthBar.cpp  Label.cpp
engine/src/Window/: Window.cpp
game_demo/: CMakeLists.txt
game_demo/assets/tilemaps/: dungeon.json
game_demo/src/: main.cpp
game_demo/src/Campaign/: CampaignState.cpp  CampaignState.hpp
game_demo/src/Entities/: Brute.cpp  Brute.hpp  Enemy.cpp  Enemy.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp
game_demo/src/Scenes/: CampaignLevelScene.cpp  CampaignLevelScene.hpp  CampaignVictoryScene.cpp  CampaignVictoryScene.hpp  GameOverScene.cpp  GameOverScene.hpp  GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp
